tests/ui/unexpected_colon.stderr
error: no rules expected the token `:`
 --> $DIR/tests/ui/unexpected_colon.rs:4:13
  |
4 |     json!({ : true });
  |             ^ no rules expected this token in macro call
